Pin the deck's half of the merge, and make a collision reproducible (#92 task 4b)
Reverting RateCli's Equivalences.resolve call alone left all 950 tests
green: main starts a blocking server so nothing drives it, and the RateRun
tests enter below the fold. RateCli.deck is the seam that closes it, on
RateCli.known's precedent — everything between the stores being read and
the server starting, in one static method a test can run. The same one-line
deletion now fails one test, and the message names the symptom: Q900, the
canonical id of the owner's own merged entity, dealt back to him as a card.

Equivalences kept its map with Map.copyOf, whose iteration order is
unspecified and salted per JVM — so where two rated local ids merge into
one canonical id, which rating survived could differ between two runs over
one unchanged log. Measured across 20 separate launches with Map.copyOf:
the order test fails 20 of 20 and the collision's answer flipped on 9. The
map now keeps log order, the first merge wins, and resolve() says plainly
that which one wins is arbitrary while the determinism is not.

The no-chains paragraph cited SameAs.declared, which never runs on this
path — Equivalences.in is fed readAll, the reconstruction path. It now
cites the constructor pair that does run.

The second readAll is measured rather than declined: on a synthetic log of
102,000 assertions, project 1918ms against readAll + Equivalences.in 244ms,
a ratio of 0.127 on a replay the tool already performs.

ADR 50 gains a dated amendment: notOffered carries a second population,
nothing above is withdrawn, and --revise diverges because a merge removes
the precondition that made --revise the only appeal path.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>